--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,6 @@
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
 #map-container { height: 180px; }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+#stats dd {
+  color: gray;
+}
 
